// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - default - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "default",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: alternate - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: alternate - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: alternate",
      "mode": "alternate",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: alternate - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: alternate - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: alternate - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: alternate_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: alternate",
      "mode": "alternate",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: alternate - value[1] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: left - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: left - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: left",
      "mode": "left",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: left - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: left - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: left - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: left_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: left",
      "mode": "left",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: left - value[1] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: right - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: right - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: right",
      "mode": "right",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: right - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.mode: right - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.mode: right - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.mode: right_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: right",
      "mode": "right",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: right - value[1] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.pending: true - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.pending: true - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pending: true",
      "pending": true,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pending: true - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.pending: true - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.pending: true - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pending: true_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pending: true",
      "pending": true,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pending: true - value[1] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.pendingDotIcon:  - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.pendingDotIcon:  - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pendingDotIcon: ",
      "pending": true,
      "pendingDot": <AntIcon
        basePath=""
        blockId="properties.pendingDotIcon: _pendingDotIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "style": Object {
              "fontSize": 16,
            },
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pendingDotIcon:  - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.pendingDotIcon:  - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.pendingDotIcon:  - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.pendingDotIcon: _2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pendingDotIcon: ",
      "pending": true,
      "pendingDot": <AntIcon
        basePath=""
        blockId="properties.pendingDotIcon: _pendingDotIcon"
        components={Object {}}
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "style": Object {
              "fontSize": 16,
            },
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pendingDotIcon:  - value[1] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.reverse: true - value[0] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.reverse: true - value[0] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.reverse: true",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": true,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.reverse: true - value[0] - TimelineList 3`] = `Array []`;

exports[`Mock render - properties.reverse: true - value[1] - TimelineList 1`] = `mocked`;

exports[`Mock render - properties.reverse: true - value[1] - TimelineList 2`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_0_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "red",
                  "name": "AiOutlineFire",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-0-Title 1"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_1_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "green",
                  "name": "AiOutlineSetting",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            data-testid="list-1-Text 2"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <AntIcon
              basePath=""
              blockId="properties.reverse: true_2_icon"
              components={Object {}}
              content={Object {}}
              events={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "makeCssClass": [Function],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
              properties={
                Object {
                  "color": "blue",
                  "name": "AiOutlineRocket",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            data-testid="list-2-Text 3"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.reverse: true",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": true,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.reverse: true - value[1] - TimelineList 3`] = `Array []`;
